<resources>
    <string name="top_header_main">Welcome to</string>
    <string name="below_header_main">KOVSIE HEALTH</string>
    <string name="top_header_login">Welcome Back</string>
    <string name="hint_email">Email</string>
    <string name="hint_student_email">Student Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_btn">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_staff">Continue As Stuff</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip_tour">Skip Tour</string>
    <string name="appoint_label">Easily Book Appointments</string>
    <string name="appointments_onB1">Effortlessly schedule your clinic appointments at your convenience.
        Say goodbye to long queues and hello to hassle-free bookings.
    </string>
    <string name="appoint_label2">Access Health Information</string>
    <string name="appointments_onB2">Get a wealth of information to help you make well-informed decisions
        about your health. Stay informed about health topics, tips, and more.
    </string>
    <string name="appoint_label3">Mobile Health Companion</string>
    <string name="appointments_onB3">Take your health with you wherever you go. Track your well-being and
        receive important health notifications, appointment reminders &amp; general tips.
    </string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="student_greeting">Hi Student</string>
    <string name="search_hint">Search a condition</string>
    <string name="health_wellness_centre">Health &amp; wellness Centre</string>
    <string name="no_appointments">You don\'t have any appointments</string>
    <string name="press_green_button">Press the green button to add an \nappointment or scroll below to access health\n information.</string>
    <string name="appointment">Appointments</string>
    <string name="health_tips">Health Tips</string>
    <string name="campaign">Campaign</string>
    <string name="student_counselling">Student\n Counselling \n&amp; \nDevelopment</string>
    <string name="service_description">Students and staff can make use of the following services that are available on campus:</string>
    <string name="minor_ailments">Minor ailments</string>
    <string name="minor_ailments_desc">Quick consultations for common health issues like headaches, minor injuries, or stomach troubles. Ideal for addressing small health concerns without a full doctor\'s appointment.</string>
    <string name="minor_ailments_plus">We also offer expert care for issues affecting the ear, nose, and throat, as well as eye conditions, skin conditions &amp; sexually transmitted diseases.</string>
    <string name="ear_nose_throat_conditions">Ear, Nose, and Throat Conditions:</string>
    <string name="ear_nose_throat_desc">Expert care for issues affecting the ear, nose, and throat, such as ear infections, sinus problems, or sore throats.</string>
    <string name="skin_conditions">Skin Conditions:</string>
    <string name="skin_conditions_desc">Consultations and treatments for various skin concerns, from rashes and minor irritations to skin infections.</string>
    <string name="STDs">Sexually Transmitted Infections:</string>
    <string name="STDs_desc">Confidential testing, diagnosis, and treatment for sexually transmitted infections, ensuring privacy and comprehensive care.</string>
    <string name="eye_conditions">Eye Conditions:</string>
    <string name="eye_condition_desc">Services related to eye health, covering issues like red eyes, minor infections, or other non-severe eye conditions.</string>
    <string name="keep_an_eye">Keep an eye out for our regular health campaigns that will provide you with the necessary information to keep you in good shape.</string>
    <string name="chronic_medication">Chronic medication</string>
    <string name="chronic_medication_desc">Prescribed drugs and treatments designed for the long-term management of ongoing medical conditions. Management and dispensing of medications for chronic conditions, ensuring continuity of care.</string>
    <string name="ART">Anti-retroviral (ART) medication:</string>
    <string name="ART_desc">Anti-retroviral medication is a specific category of chronic drugs used in the treatment of HIV (Human Immunodeficiency Virus) infection. ART works by suppressing the replication of the virus, slowing down
        the progression of HIV to AIDS (Acquired Immunodeficiency Syndrome), and helping individuals with HIV lead healthier and longer lives.</string>
    <string name="PrEP">Pre-exposure Prophylaxis (PrEP):</string>
    <string name="PrEP_desc">Pre-exposure prophylaxis is a preventive medication strategy aimed at reducing the risk of contracting certain infections, primarily HIV, before potential exposure. In the context of HIV prevention,
        PrEP involves taking specific antiretroviral medications regularly to lower the chances of acquiring the virus, particularly for
        individuals at high risk of exposure. It is a proactive approach to safeguarding against infection."</string>
    <string name="screenings">Screenings</string>
    <string name="screenings_desc">Prescribed drugs and treatments designed for the long-term management of ongoing medical conditions. Management and dispensing of medications for chronic conditions, ensuring continuity of care.</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="cholesterol_desc">Cholesterol is a fatty substance in your blood. Monitoring cholesterol levels is vital for heart health. Knowing your cholesterol status can guide lifestyle choices and dietary habits, promoting a heart-friendly life.</string>
    <string name="blood_pressure_desc">Blood pressure measures the force of blood against your artery walls. It\'s an essential indicator of heart health. High blood pressure can lead to various health issues, so regular checks help ensure your heart
        is happy and healthy.</string>
    <string name="blood_glucose">Screenings</string>
    <string name="BMI">Screenings</string>
    <string name="weight">Screenings</string>
    <string name="sexual_health1">Sexual health</string>
    <string name="sexual_health1_desc">Comprehensive sexual health services, including various contraceptive options tailored to individual needs and preferences.</string>
    <string name="mens_health">Men\'s health</string>
    <string name="women_health">Women\'s health</string>
    <string name="helpline">Helpline</string>
    <string name="clinic_staff">Clinic Staff</string>
    <string name="support_ervices">Support Services</string>
    <string name="health_tips_desc">Daily wellness &amp; wisdom! Get quick tips to help you stay healthy - stress relief,
        nutrition hacks, and more for a healthier you.</string>
    <string name="quick_tips">Quick Tips</string>
    <string name="quick_tips_content">Instant health boosts for your busy campus life.</string>
    <string name="quick_tip_1">Take the stairs for a mini workout.</string>
    <string name="quick_tip_2">Get sunlight for a mood lift.</string>
    <string name="quick_tip_3">Deep breathing for stress relief.</string>
    <string name="quick_tip_4">Keep healthy snacks in your bag.</string>
    <string name="quick_tip_5">Use a study timer for focus.</string>
    <string name="quick_tip_6">Stay hydrated with water breaks.</string>
    <string name="quick_tip_7">Prioritize tasks with to-do lists.</string>
    <string name="quick_tip_8">Stand or stretch every hour.</string>
    <string name="quick_tip_9">Connect with friends daily.</string>
    <string name="quick_tip_10">Quality sleep is non-negotiable.</string>
    <string name="find_more">Find Out More...</string>
    <string name="health_and_wellness">Health &amp; Wellness</string>
    <string name="health_and_wellness_content">Explore tips and activities to enhance your overall wellness, fostering a balanced and fulfilling lifestyle.</string>
    <string name="stress_management">Stress Management</string>
    <string name="stress_relief_hacks_content">Discover practical and effective techniques for managing stress and finding calm.</string>
    <string name="healthy_eating">Healthy Eating</string>
    <string name="healthy_eating_content">Explore smart and simple nutrition tricks for a balanced diet.</string>
    <string name="home_icon">Home</string>
    <string name="like_icon">Like</string>
    <string name="favorite_icon">Favorite</string>
    <string name="logo_of_app_1">Recipe</string>
    <string name="logo_of_app_2">App</string>
    <string name="logo_of_app_3">RecipeRead</string>
    <string name="filter_icon">Filter</string>
    <string name="menuhome_btn">MenuHome_btn</string>
    <string name="menulike_btn">MenuLike_btn</string>
    <string name="cook_time">Сooking time:</string>
    <string name="cook_difficulty">Cooking Difficulty:</string>
    <string name="course_desc">This delicious meal is perfect for 3 dinners. \n\nIt produces 4 servings and requires the following ingredients:\n
        - Potatoes: 2 pieces \n- Onions: 1 piece \n- Tomatoes: 2 pieces \n- Tomatoes in their own juice: 350 grams \n- Water: 350 milliliters \n- Oil: 2 tablespoons

        \n\nTo prepare this meal, follow these simple steps:

        \n\n1. Peel and chop the potatoes, onions, and tomatoes.
        \n2. In a pan, heat 2 tablespoons of oil.
        \n3. Add the chopped onions and fry until golden brown.
        \n4. Add the potatoes and tomatoes, cooking until they are slightly tender.
        \n5. Pour in 350 milliliters of water and add the tomatoes in their own juice.
        \n6. Allow the mixture to simmer until the potatoes are fully cooked.
        \n7. Serve hot and enjoy this wholesome and flavorful dish!</string>
    <string name="sleep_hygiene">Sleep Hygiene</string>
    <string name="sleep_hygiene_content">Learn about habits that contribute to good sleep hygiene for better sleep quality.</string>
    <string name="exercise_and_fitness">Exercise &amp; Fitness</string>
    <string name="exercise_and_fitness_content">Discover the benefits of exercise and fitness practices to enhance physical health and overall well-being.</string>
    <string name="campus_safety">Campus Safety</string>
    <string name="campus_safety_content">Gain insights and tips on maintaining personal safety and security within the campus</string>
    <string name="sexual_health_education">Sexual Health Education</string>
    <string name="sexual_health_education_content">Explore educational content to make informed decisions regarding sexual well-being, reproductive health, and relationships.</string>
    <string name="mental_health_support">Mental Health Support</string>
    <string name="mental_health_support_content">Discover support systems, coping strategies, and information to foster a positive mental health environment.</string>
    <string name="study_techniques">Stress Relief Hacks</string>
    <string name="study_techniques_content"></string>
    <string name="managing_relationships">Managing Relationships</string>
    <string name="managing_relationships_content"></string>
    <string name="more_health_tips_content">For More Health Tips, Visit Our Website</string>
    <string name="health_tips_content">Delve into a variety of health-related insights. From general wellness advice to specific health concerns,
        this section offers a diverse range of tips to enhance your overall well-being.</string>
    <string name="campaigns_desc">Join impactful initiatives! From GBV to Sexual &amp; Substance Abuse, Stay informed &amp; champion health on campus.
    Get involved now!</string>
    <string name="ufs_logo">UFS Logo</string>
</resources>