<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SCD">

  <LinearLayout
      android:id="@+id/categoriesContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <!-- Quick Tips Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/quick_tips"
        app:color="#111" />

    <!-- Health and Wellness Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/health_and_wellness"
        app:color="#111" />

    <!-- Stress Management Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/stress_management"
        app:color="#ff5b5b" />

    <!-- Healthy Eating Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/healthy_eating"
        app:color="#00b91e" />

    <!-- Sleep Hygiene Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/sleep_hygiene"
        app:color="#8a4dff" />

    <!-- Exercise and Fitness Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/exercise_and_fitness"
        app:color="#ffa31a" />

    <!-- Campus Safety Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/campus_safety"
        app:color="#007bff" />

    <!-- Sexual Health Education Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/sexual_health_education"
        app:color="#fe5e51" />

    <!-- Mental Health Support Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/mental_health_support"
        app:color="#ff6b81" />

    <!-- Managing Relationships Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/managing_relationships"
        app:color="#ff99cc" />

    <!-- Study Techniques Section -->
    <include layout="@layout/health_tips_section_layout"
        app:title="@string/study_techniques"
        app:color="#00e0fc" />

  </LinearLayout>

  </LinearLayout>