<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="39dp"
        android:text="@string/top_header_main"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/below_header_main"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="184dp"
        android:src="@drawable/logo3"
        android:contentDescription="@string/ufs_logo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogInMain"
        android:layout_width="327dp"
        android:layout_height="42dp"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="143dp"
        android:backgroundTint="@color/md_onPrimaryContainer"
        android:text="@string/login_btn"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnStuffLogin"
        android:layout_width="327dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textColor="@color/red"/>

    <Button
        android:id="@+id/btnGoSplash"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/white"
        android:text="Dashboard"
        android:textColor="@color/red"/>

</RelativeLayout>