<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".chronic_medication">

    <LinearLayout
        android:id="@+id/layoutBackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:padding="18dp"
            android:backgroundTint="@color/white"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_below="@+id/layoutBackButton">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/chronic_medsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chronic_medication"
                android:textSize="36sp"
                android:textColor="@color/green"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/chronic_medsImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_below="@id/chronic_medsTitle"
                android:src="@drawable/chronic_medication"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/chronic_medsDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chronic_medication_desc"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_below="@+id/chronic_medsImage"/>

            <ListView
                android:id="@+id/listview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chronic_medsDesc"
                android:scrollbars="none">
            </ListView>

            <TextView
                android:id="@+id/txtFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minor_ailments_plus"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/listview"/>

            <!--        Antiretroviral (ART) medication-->
            <TextView
                android:id="@+id/ART"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ART"
                android:textSize="22sp"
                android:gravity="start"
                android:paddingStart="18dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/txtFooter"/>

            <LinearLayout
                android:id="@+id/layoutART"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/ART">

                <ImageView
                    android:id="@+id/Surgeon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pills"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/EarNoseDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:text="@string/ART_desc" />

            </LinearLayout>

            <!--        Pre-exposure Prophylaxis (PrEP)-->
            <TextView
                android:id="@+id/PrEP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PrEP"
                android:textSize="22sp"
                android:gravity="start"
                android:paddingStart="18dp"
                android:layout_marginTop="18dp"
                android:layout_below="@+id/layoutART"/>

            <LinearLayout
                android:id="@+id/layoutPrEP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/PrEP"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/dna"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/tablet"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/SkinDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/PrEP_desc"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txtBottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="#1B1B1F"
                android:text="@string/keep_an_eye"
                android:layout_below="@+id/layoutPrEP"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnScreenings"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:drawableRight="@drawable/ic_forward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screenings"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:layout_below="@+id/txtBottom"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMinorAilments"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:drawableLeft="@drawable/ic_backward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minor_ailments"
                android:gravity="center"
                android:layout_marginTop="18dp"
                android:layout_below="@+id/btnScreenings"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>